--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  graphql_flutter: ^5.1.2
+  another_flushbar: ^1.12.30
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
 
