--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  get_it: ^7.6.0
+  shared_preferences: ^2.2.0
+  beamer: ^1.5.6
+  get: ^4.6.5
+
 
 dev_dependencies:
 
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
